[project]
name = "agentic-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.26",
    "langchain==0.3.26",
    "langchain-openai==0.3.25",
    "langgraph==0.4.8",
    "langsmith==0.4.1",
    "rich>=14.0.0",
    "duckduckgo-search==8.0.4",
    "langfuse==2.60.4",
    "langchain-google-genai==2.1.5",
    "pandas>=2.3.0",
    "pymupdf4llm>=0.0.25",
    "gradio>=5.35.0",
    "docling>=2.39.0",
]
